chore: updated JDA to 6.0.0, fixed buttons, added delete button to UrbanDictionaryCmd